# nanoindex

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: capture-gifs.mjs  generate-diagrams.html  make-gifs.mjs  package.json
benchmarks/: build_docbench_trees.py  build_mmlongbench_trees.py  cuad_eval.py  docbench_legal_eval.py  eval_v2.py  financebench_eval.py  financebench_full.py  financebench_graph_eval.py  financebench_nanonets_vlm.py  legalbench_rag_eval.py  longhealth_eval.py  mmlongbench_eval.py  modal_graph_builder.py  rebuild_and_eval.py  rebuild_financebench.py  rigorous_test.py  test_agentic.py  test_failures.py  test_fast_mode.py  test_opensource_pipeline.py
benchmarks/results_cuad/: summary.json
benchmarks/results_docbench_legal/: summary.json
benchmarks/results_full/: summary.json
benchmarks/results_longhealth/: answers.json
benchmarks/results_nanonets_vlm/: summary.json
benchmarks/results_v3/: summary.json
docs/: launch-narrative.md
examples/: 01_basic_indexing.py  02_search_and_ask.py  03_vision_query.py  04_batch_indexing.py  05_custom_llm.py  06_multi_document.py  nanoindex_quickstart.ipynb
nanoindex/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  extract.py  kb.py  models.py
nanoindex/core/: agentic.py  citation_resolver.py  citations.py  client.py  client_v2.py  community_detector.py  context_extractor.py  contradiction_detector.py  document_classifier.py  document_index.py  document_store.py  embedder.py  enricher.py  entity_extractor.py  entity_resolver.py  extractor.py  fast_retriever.py  form_extractor.py  generator.py  gliner_extractor.py  graph_builder.py  llm.py  refiner.py  retriever.py  self_corrector.py  spacy_extractor.py  table_extractor.py  table_validator.py  text_tree_builder.py  title_disambiguator.py  tree_builder.py  tree_validator.py  validation_anchor.py  wiki_compiler.py
nanoindex/core/modal_processors/: __init__.py  base.py  image_processor.py  table_processor.py
nanoindex/core/parsers/: __init__.py  base.py  nanonets.py  pymupdf.py
nanoindex/knowledge/: __init__.py  financial_kb.json  kb.py
nanoindex/utils/: markdown.py  pdf.py  slug.py  tokens.py  tree_ops.py
tests/: conftest.py  test_citation_resolver.py  test_citations.py  test_client_v2.py  test_communities.py  test_context_extractor.py  test_document_classifier.py  test_entity_extractor.py  test_extract.py  test_extractor.py  test_form_extractor.py  test_gliner_extractor.py  test_integration.py  test_kb.py  test_kb_enhancements.py  test_modal_processors.py  test_models.py  test_parsers.py  test_retriever.py  test_slug.py  test_table_extractor.py  test_tree_builder.py  test_wiki_compiler.py
