[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoindex"
version = "0.1.0"
description = "Nanonets-powered document intelligence: structured tree indexing, reasoning-based retrieval, and vision-aware answer generation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nanonets", email = "info@nanonets.com"}]
keywords = ["document-intelligence", "ocr", "tree-index", "nanonets", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24.0",
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.50.0",
]

[project.scripts]
nanoindex = "nanoindex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["nanoindex*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
