[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoindex"
version = "0.4.0"
description = "Open-source GraphRAG with self-validating trees, agentic retrieval, and pixel-level citations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Nanonets", email = "info@nanonets.com"}]
keywords = ["document-intelligence", "rag", "ocr", "tree-index", "knowledge-graph", "nanonets", "retrieval", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24.0",
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.50.0",
    "anthropic>=0.30.0",
    "networkx>=3.0",
    "spacy>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/nanonets/nanoindex"
Repository = "https://github.com/nanonets/nanoindex"
"Bug Tracker" = "https://github.com/nanonets/nanoindex/issues"
"Nanonets OCR-3" = "https://nanonets.com/research/nanonets-ocr-3"

[project.scripts]
nanoindex = "nanoindex.cli:main"

[project.optional-dependencies]
gliner = [
    "gliner>=0.2.0",
]
gliner-gpu = [
    "gliner2>=0.1.0",
]
embeddings = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
]
all = [
    "nanoindex[gliner,gliner-gpu,embeddings]",
]
dev = [
    "nanoindex[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
include = ["nanoindex*"]

[tool.setuptools.package-data]
nanoindex = ["knowledge/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
